# simple_tcp_server_client

./: TCPClient.java  TCPServer.java  read_me  run  shadow.yaml
client/src/: main.rs
old_client_server/server/src/: main.rs
project-tonic/: Cargo.toml  build.rs
project-tonic/proto/: config.proto
project-tonic/src/: client.rs  h_client.rs  h_monitor.rs  h_server.rs  monitor.rs  server.rs
shadow.data/: processed-config.yaml  sim-stats.json
shadow.data/hosts/client/: client.h_client.1000.shimlog  client.h_client.1000.stderr
shadow.data/hosts/monitor/: monitor.h_monitor.1000.shimlog  monitor.h_monitor.1000.stdout
shadow.data/hosts/server/: server.h_server.1000.shimlog  server.h_server.1000.stdout
