[package]
name = "config-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Monitor gRPC server
name = "monitor"
path = "src/monitor.rs"

[[bin]] # Bin to run the server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the client
name = "client"
path = "src/client.rs"


[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"